--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.56.1",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://nameaccount.github.io/nreact_todo_with_tags"
+  "homepage": "https://nameaccount.github.io/nreact_todo_with_tags/"
 }
