feat: added edit mode

--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://nameaccount.github.io/nreact_todo_with_tags/"
+  "homepage": "https://eugenekovgan.github.io/react_todo_with_tags/"
 }
